retouche bouton contraste

--- a/style.css
+++ b/style.css
@@ -771,15 +771,15 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #be4913;
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #be4913!important;
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #be4913;
     color: #FFFFFF!important;
 }
 
