--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@ p.citation{
     font-size: 20px;
 }
 
+p.realisations
+{
+    font-size: 30px;
+}
+
 a,
 button {
     transition: all .3s ease-in-out;
