--- a/style.css
+++ b/style.css
@@ -839,11 +839,11 @@ h4.mg-md text-center tc-white
 }
 
 .bg-dots-bg {
-    background-image: url("img/dots.jpg");
+    background-image: url("img/dots-bg.png");
 }
 
 .bg-lines-h2-bg {
-    background-image: url("img/line.jpg");
+    background-image: url("img/lines-h2-bg.png");
 }
 
 .bg-banniere {
